# comfyui-prompt-factory

./: .gitignore  LICENSE  README.md  __init__.py  composer-test.py  main.py  node.py  pyproject.toml  requirements.txt  rules.json  utils.py  workflow.json
.github/workflows/: publish.yml
config/: config.json
config.default/: config.json  variables.json
config.default/nodes/: character.json  clothes.json  composition.json  environment.json  eyes.json  hair.json  nodes.json
config.default/rules/: rules.json
py/: merge_strings.py  node.py  utils.py
py/nodes/: apply_rules.py  cleanup_prompt.py  composer.py  merge_strings.py
py/nodes/node_factory/: __init__.py  _inputs.py  _tags.py  _variables.py
py/utils/: config.py
web/: merge_strings.js
